--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-chrono = {version = "0.4.23", features = ["serde"]}
+regex = "1.5.4"
 rusqlite = "0.29.0"
 statrs = "0.16.0"
 nom = "7.1.0"
